<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/colorOnBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" /> <!-- Set default to gone -->

            <ImageView
                android:id="@+id/ivEventImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/event_image"/>

            <!-- Floating Action Button untuk Favorit -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:src="@drawable/favorite2"
                android:contentDescription="@string/add_to_favorite"
                android:backgroundTint="@color/iku"/>



            <TextView
                android:id="@+id/tvEventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/name1"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvOwnerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/owner1"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvEventTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/time1"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tvRemainingQuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/quota1"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tvEventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?attr/colorOnPrimary"

                android:text="@string/desc1"
                android:layout_marginTop="16dp"/>

            <Button
                android:id="@+id/btnOpenLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buka_link_acara"
                android:layout_marginTop="16dp"
                android:background="?attr/colorPrimary"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>
